<resources>
  <string name="app_name">GATracker</string>
  <string name="login_welcome">Welcome to\nGrade and Assignment Tracker. \nPlease Sign In.</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login!</string>
  <string name="user_welcome">Welcome</string>
  <string name="accept_assignments">Accept Assignments</string>
  <string name="view_grades">View Grades</string>
  <string name="create_assignment">Create Assignment</string>
  <string name="grade_assignment">Grade Assignment</string>
  <string name="create_user">Create User</string>
  <string name="create_course">Create Course</string>
  <string name="preference_file_key">liaichiPreferenceFileNameGAT</string>
  <string name="preference_userid_key">liaichiPreferenceUserIdKeyGAT</string>
  <string name="please_create_a_user">Please create a user</string>
  <string name="welcome_admin">Welcome Admin!</string>

    <string name="sort_by_due_date">Sort by Due Date</string>
  <string name="sort_by_assignment_name">Sort by Assignment Name</string>
  <string name="name_of_assignment">Name of Assignment</string>
    <string name="filter">Filter</string>
  <string name="calculate_course_average">Calculate Course Average</string>
  <string name="course_average">Course Average:</string>
  <string name="view_grades_text">View Grades</string>
  <string name="accept_assignments_text">Accept Assignments</string>
  <string name="accept">Accept</string>
    <string name="publish_assignment">Publish Assignment</string>
    <string name="assignment_title">Assignment Title</string>
  <string name="due_date">Due Date</string>
  <string name="course_name">Course Name</string>
  <string name="username_of_course_manager">Username of Course Manager</string>
  <string name="publish_course">Publish Course</string>
  <string name="create_a_course">Create a Course</string>
  <string name="please_create_a_user_text_view">Please Create a User</string>
  <string name="password_hint">password</string>
  <string name="enter_password_again">enter password again</string>
  <string name="username_hint">username</string>
  <string name="teacher">Teacher</string>
  <string name="admin">Admin</string>
  <string name="is_the_user_a_student_teacher_or_admin">Is the user a student, teacher, or admin?</string>
  <string name="create_a_user">Create a User</string>
  <string name="create">Create</string>
  <string name="student">Student</string>
  <string name="enter_course_id">Enter Course ID</string>
  <string name="grade_assignment_text_view">Grade Assignment</string>
  <string name="username_to_grade">Username to Grade</string>
  <string name="assignment_to_grade">Assignment to Grade</string>
    <string name="submit_grade">Submit Grade</string>
  <string name="grade_from_0_to_100">Grade from 0 to 100</string>
  <string name="enter_feedback">Enter Feedback</string>
  <string name="edit_assignment">Edit Assignment</string>
  <string name="teacher_options">Teacher Options</string>
  <string name="edit_course_name">Edit Course Name</string>
  <string name="alter_user">Alter User</string>
  <string name="admin_options">Admin Options</string>
    <string name="edit_course_name_text">Edit Course Name</string>
    <string name="coursetochange">courseToChange</string>
  <string name="course_name_to_change">Course Name to Change</string>
  <string name="new_course_name">New Course Name</string>
  <string name="change_course_name">Change Course Name</string>
    <string name="welcome">Welcome!</string>
    <string name="please_sign_in">Please Sign in</string>
  <string name="grade_and_assignment_tracker">Grade and Assignment Tracker</string>
  <string name="login_text">Login</string>
  <string name="username_to_grade_text">Username to Grade</string>
  <string name="username_to_grade_input">Username To Grade</string>
    <string name="edit_assignment_text">Edit Assignment</string>
  <string name="edit_assignment_title">Edit Assignment</string>
  <string name="assignment_to_modify">Assignment to Modify</string>
  <string name="new_assignment_name">New Assignment Name</string>
  <string name="change_assignment_name">Change Assignment Name</string>
  <string name="duedate">dueDate</string>
  <string name="dueDate">dueDate</string>
  <string name="due_date_text">Due Date</string>
  <string name="change_due_date">Change Due Date</string>
  <string name="alter_user_title">Alter User</string>
  <string name="username_to_alter">Username to Alter</string>
  <string name="username_to_alter_text">Username to alter</string>
  <string name="delete_user">Delete User</string>
  <string name="new_username">New Username</string>
  <string name="change_username">Change Username</string>
  <string name="new_password">New Password</string>
  <string name="update_password">Update Password</string>
</resources>