<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginPageActivity">

  <TextView
      android:id="@+id/titleLoginTextView"
      android:layout_width="match_parent"
      android:layout_height="150dip"
      android:layout_margin="16dip"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="4dp"
      android:fontFamily="monospace"
      android:gravity="center"
      android:text="@string/grade_and_assignment_tracker"
      android:textColor="#000000"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/welcomeTextView"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_margin="10dip"
      android:gravity="center"
      android:text="@string/welcome"
      android:textStyle="bold"
      android:textSize="20sp"
      android:fontFamily="monospace"
      android:textColor="#000000"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleLoginTextView" />

  <TextView
      android:id="@+id/signInTextView"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_margin="10dip"
      android:gravity="center"
      android:text="@string/please_sign_in"
      android:textStyle="bold"
      android:textSize="20sp"
      android:fontFamily="monospace"
      android:textColor="#000000"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />


  <EditText
      android:id="@+id/userNameLoginEditText"
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:layout_margin="16dp"
      android:layout_marginTop="180dp"
      android:autofillHints="Please enter username"
      android:gravity="center"
      android:hint="@string/username"
      android:inputType="text"
      android:textSize="24sp"
      android:background="@drawable/custom_input"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.875"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/signInTextView" />

  <EditText
      android:id="@+id/passwordLoginEditText"
      android:layout_width="match_parent"
      android:layout_height="85dp"
      android:layout_margin="16dp"
      android:autofillHints="Please enter password"
      android:gravity="center"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textSize="24sp"
      android:background="@drawable/custom_input"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText" />

  <Button
      android:id="@+id/loginButton"
      android:layout_width="227dp"
      android:layout_height="54dp"
      android:layout_marginTop="32dp"
      android:background="@drawable/main_button"
      android:text="@string/login_text"
      android:textColor="#ffffff"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>