<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".EditAssignmentActivity">

    <TextView
        android:id="@+id/editAssignmentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="310dp"
        android:height="47dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        android:textColor="#000000"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="@string/edit_assignment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/assignmentToModifyEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:gravity="center"
        android:background="@drawable/custom_input"
        android:hint="@string/assignment_to_modify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAssignmentTextView"
        android:autofillHints="assignmentName" />

    <EditText
        android:id="@+id/newAssignmentEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:gravity="center"
        android:background="@drawable/custom_input"
        android:hint="@string/new_assignment_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignmentToModifyEditText"
        android:autofillHints="assignmentName" />

    <Button
        android:id="@+id/changeAssignmentNameButton"
        android:layout_width="227dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_button"
        android:text="@string/change_assignment_name"
        android:textSize="15sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAssignmentEditText" />

    <EditText
      android:id="@+id/DueDateEditText"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_margin="30dp"
      android:layout_marginTop="240dp"
      android:autofillHints="assignmentName"
      android:background="@drawable/custom_input"
      android:gravity="center"
      android:hint="@string/due_date_text"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/changeAssignmentNameButton"
      tools:ignore="TextFields" />

    <Button
        android:id="@+id/changeDueDateButton"
        android:layout_width="227dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_button"
        android:text="@string/change_due_date"
        android:textSize="15sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DueDateEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>